? - Release 0.4.0_alpha2
--------------------------------------------------
Bug fixes:
	* Bug #9834 - Terminating zfs-fuse didn't unmount filesystems.
	* Bug #9835 - zfs-fuse would exit when killing zfs or zpool with ctrl-c.
	* Fixed bug where files bigger than 2 GB couldn't be opened on 64-bit platforms.

2006/12/26 - Release 0.4.0_alpha1
--------------------------------------------------
Features:
	* Updated ZFS code to Nevada build 53
	* Enabled write support for ZFS filesystems

2006/12/23 - Release 0.3.1
--------------------------------------------------
Bug fixes:
	* Fixed bug #9746 - Compilation error on Fedora Core 6
Enhancements:
	* Display a more useful error message when the zfs-fuse daemon is not running.
	  Suggestion by rincebrain.

2006/12/14 - Release 0.3.0
--------------------------------------------------
Features:
	* Updated ZFS code to Nevada build 50
	* Implemented read-only support for ZFS filesystems

2006/08/27 - Release 0.2.2
--------------------------------------------------
Bug fixes:
	* Fixed compilation error -- lib/libsolcompat/include/sys/stat.h:48: error: `BLKGETSIZE64' undeclared
	  Problem reported by Roland Kletzing.

2006/08/22 - Release 0.2.1
--------------------------------------------------
Features:
	* Devices bigger than 2 TB should now work on 32-bit machines
Bug fixes:
	* Fixed block device size handling on the zdb/zpool utilities.

2006/08/20 - Release 0.2.0
--------------------------------------------------
Features:
	* Implemented zfs-fuse process.
	  Now it's possible to manage ZFS pools and filesystems with the zpool and zfs
          commands.
	  This effectively makes phase 3 complete.

2006/06/15 - Release 0.1.3
--------------------------------------------------
Bug fixes:
	* Compilation failure -- include/sol_compat.h:86: warning: redefinition of `caddr_t'.
	  Problem reported by Eric Hill.
	* Time-related overflow on 32-bit machines.
	  Problem found with the help of Eric Hill.

2006/06/13 - Release 0.1.2